Fix math block overflows

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -71,3 +71,7 @@ hr {
 small {
   color:rgb(128, 129, 120);
 }
+
+.math {
+  overflow: auto;
+}
